--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ny Dang. Aspiring Software Engineer.</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Thanks for tapping in.</h1>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>PiggyBank</strong></li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Feel free to reach out here!</h2>
+        <p>trucnyd@gmail.com</p>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+
+
+</html>
