--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ny Dang. Aspiring Software Engineer.</title>
+    <title>Aspiring Software Engineer.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
