--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <section id="about">
         <h2>About Me</h2>
+        <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif">
         <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025.</p>
     </section>
 
