--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1>Thanks for tapping in.</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif">
+        <!-- <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif"> -->
         <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025.</p>
     </section>
 
