--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aspiring Software Engineer.</title>
+    <title>Ny Dang</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Thanks for tapping in.</h1>
+        <h1>Ny Dang. Aspiring Software Engineer.</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -22,7 +22,7 @@
     <section id="about">
         <h2>About Me</h2>
         <!-- <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif"> -->
-        <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025.</p>
+        <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025. Thanks for tapping in, and feel free to scroll to get to know more about me :3</p>
     </section>
 
     <section id="projects">
