--- a/index.html
+++ b/index.html
@@ -22,14 +22,28 @@
     <section id="about">
         <h2>About Me</h2>
         <!-- <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif"> -->
-        <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025. Thanks for tapping in, and feel free to scroll to get to know more about me :3</p>
+        <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025. Scroll to get to know more about me!</p>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="experience">
+            <h3>Computer Vision Research Assistant</h3>
+            <p><strong>October 2024 - Present</strong></p>
+        </div>
+        <div class="experience">
+            <h3>AR Development Extern</h3>
+            <p><strong>September 2024 - Present</strong></p>
+        </div>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <ul>
-            <li><strong>PiggyBank</strong></li>
-        </ul>
+        <div class="project">
+            <h3>HackUTD | PiggyBank</h3>
+            <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
+            <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
+        </div>
     </section>
 
     <section id="contact">
