--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>HackUTD // PiggyBank</h3>
-            <span class=""project-date">January 2024</span>
-        </div>
-        <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
-        <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
+            <span class="project-date">January 2024</span>
+            <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
+            <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
         </div>
     </section>
 
