--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Ny Dang. Aspiring Software Engineer.</h1>
+        <h1>Ny Dang.</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -24,7 +24,7 @@
     <section id="about">
         <h2>About Me</h2>
         <!-- <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif"> -->
-        <p>Howdy! I'm a Computer Science major at the University of Houston graduating December 2025. Scroll to get to know more about me!</p>
+        <p>Howdy! I'm Ny, an aspiring Software Engineer looking to break into the tech industry. Scroll to get to know more about me!</p>
     </section>
 
     <section id="experience">
