--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="about">
         <h2>About Me</h2>
         <!-- <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif"> -->
-        <p>Howdy! I'm Ny, an aspiring Software Engineer looking to break into the tech industry. Scroll to get to know more about me!</p>
+        <p>Howdy! I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
     </section>
 
     <section id="experience">
