--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ny Dang</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="experience.css">
 </head>
 <body>
     <header>
@@ -31,11 +32,11 @@
         <h2>Experience</h2>
         <div class="experience">
             <h3>Computer Vision Research Assistant</h3>
-            <p><strong>October 2024 - Present</strong></p>
+            <span class="experience-date">October 2024 - Present</span>
         </div>
         <div class="experience">
             <h3>AR Development Extern</h3>
-            <p><strong>September 2024 - Present</strong></p>
+            <span class="experience-date">September 2024 - Present</span>
         </div>
     </section>
 
