--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
     </section>
 
     <section id="contact">
-        <h2>Feel free to reach out here!</h2>
+        <h2>Let's connect!</h2>
         <p>trucnyd@gmail.com</p>
+        <p>
+            <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
+            </a>
+        </p>
     </section>
 
     <script src="script.js"></script>
