--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
     </section>
 
     <section id="contact">
-        <h2>Let's connect!</h2>
+        <h2>Contact</h2>
         <p>trucnyd@gmail.com</p>
         <p>
-            <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/wqejio/" target="_blank" rel="noopener noreferrer">
+                Connect with me on LinkedIn
             </a>
         </p>
     </section>
