--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2>Contact</h2>
         <p>trucnyd@gmail.com</p>
         <p>
-            <a href="https://www.linkedin.com/in/wqejio/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
                 Connect with me on LinkedIn
             </a>
         </p>
