--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
             <h3>AR Development Extern</h3>
             <span class="experience-date">September 2024 - Present</span>
         </div>
+        <div class="experience">
+            <h3>AI R&D and Cloud Engineering Intern // Rockwell Automation</h3>
+            <span class="experience-date">May 2024 - August 2024</span>
+            <p>
+                Optimized React front-end compatibility and integration with the HMI for usability by implementing API calls into
+                a StreamLit user interface, enabling 8 endpoints including document uploads and data streaming.
+            </p>
+            <p>
+                Enhanced MLOps observability by integrating middleware that captures over 8 key metrics using LangSmith,
+tracking HTTP requests to all endpoints, offering insights into the model’s processing and output generation.
+            </p>
+            <p>
+                Decreased overall deployment time by 11% by reducing setup time by 5 minutes per VM, thus enhancing opera-
+tional efficiency by automating the configuration of undetected data disks in Azure VMs using PowerShell.
+            </p>
+            <p>
+                Restored VMs compromised by CrowdStrike within 24 hrs by executing DevOps remediation pipelines.
+            </p>
+            <p>
+                Enhanced WVD firewall security by adding IP addresses to the Unilever whitelist using Terraform.
+            </p>
+
+        </div>
     </section>
 
     <section id="projects">
