--- a/index.html
+++ b/index.html
@@ -59,18 +59,24 @@ tional efficiency by automating the configuration of undetected data disks in Az
             <p>
                 Enhanced WVD firewall security by adding IP addresses to the Unilever whitelist using Terraform.
             </p>
-
         </div>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>HackUTD // PiggyBank</h3>
+            <h3>PiggyBank // TAMUHack</h3>
             <span class="project-date">January 2024</span>
             <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
             <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
         </div>
+        <div class="project">
+            <h3>Casa Compass // HackUTD</h3>
+            <span class="project-date">November 2023</span>
+            <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
+            <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
+        </div>
+
     </section>
 
     <section id="contact">
