--- a/index.html
+++ b/index.html
@@ -41,24 +41,13 @@
         <div class="experience">
             <h3>AI R&D and Cloud Engineering Intern // Rockwell Automation</h3>
             <span class="experience-date">May 2024 - August 2024</span>
-            <p>
-                Optimized React front-end compatibility and integration with the HMI for usability by implementing API calls into
-                a StreamLit user interface, enabling 8 endpoints including document uploads and data streaming.
-            </p>
-            <p>
-                Enhanced MLOps observability by integrating middleware that captures over 8 key metrics using LangSmith,
-tracking HTTP requests to all endpoints, offering insights into the model’s processing and output generation.
-            </p>
-            <p>
-                Decreased overall deployment time by 11% by reducing setup time by 5 minutes per VM, thus enhancing opera-
-tional efficiency by automating the configuration of undetected data disks in Azure VMs using PowerShell.
-            </p>
-            <p>
-                Restored VMs compromised by CrowdStrike within 24 hrs by executing DevOps remediation pipelines.
-            </p>
-            <p>
-                Enhanced WVD firewall security by adding IP addresses to the Unilever whitelist using Terraform.
-            </p>
+            <ul>
+                <li class="custom-bullet">Optimized React front-end compatibility and integration with the HMI for usability by implementing API calls into a StreamLit user interface, enabling 8 endpoints including document uploads and data streaming.</li>
+                <li class="custom-bullet">Enhanced MLOps observability by integrating middleware that captures over 8 key metrics using LangSmith, tracking HTTP requests to all endpoints, offering insights into the model’s processing and output generation.</li>
+                <li class="custom-bullet">Decreased overall deployment time by 11% by reducing setup time by 5 minutes per VM, thus enhancing operational efficiency by automating the configuration of undetected data disks in Azure VMs using PowerShell.</li>"
+                <li class="custom-bullet">Restored VMs compromised by CrowdStrike within 24 hrs by executing DevOps remediation pipelines.</li>
+                <li class="custom-bullet">Enhanced WVD firewall security by adding IP addresses to the Unilever whitelist using Terraform.</li>
+            </ul>
         </div>
     </section>
 
