--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
     <section id="experience">
         <h2>Experience</h2>
         <div class="experience">
-            <h3>Computer Vision Research Assistant</h3>
+            <h3>Computer Vision Research Assistant // University of North Texas</h3>
             <span class="experience-date">October 2024 - Present</span>
+            <p>
+                Under the supervision of Dr. Heng Fan, where I am working on liquid detection in the wild using computer vision and deep learning.
+            </p>
         </div>
         <div class="experience">
-            <h3>AR Development Extern</h3>
+            <h3>AR Development Extern // Snap Inc.</h3>
             <span class="experience-date">September 2024 - Present</span>
+            <p>
+                I am currently using JavaScript and Lens Studio to develop AR experiences using digital storytelling as a business model for Snapchat.
+            </p>
         </div>
         <div class="experience">
             <h3>AI R&D and Cloud Engineering Intern // Rockwell Automation</h3>
@@ -44,7 +50,7 @@
             <ul>
                 <li class="custom-bullet">Optimized React front-end compatibility and integration with the HMI for usability by implementing API calls into a StreamLit user interface, enabling 8 endpoints including document uploads and data streaming.</li>
                 <li class="custom-bullet">Enhanced MLOps observability by integrating middleware that captures over 8 key metrics using LangSmith, tracking HTTP requests to all endpoints, offering insights into the model’s processing and output generation.</li>
-                <li class="custom-bullet">Decreased overall deployment time by 11% by reducing setup time by 5 minutes per VM, thus enhancing operational efficiency by automating the configuration of undetected data disks in Azure VMs using PowerShell.</li>"
+                <li class="custom-bullet">Decreased overall deployment time by 11% by reducing setup time by 5 minutes per VM, thus enhancing operational efficiency by automating the configuration of undetected data disks in Azure VMs using PowerShell.</li>
                 <li class="custom-bullet">Restored VMs compromised by CrowdStrike within 24 hrs by executing DevOps remediation pipelines.</li>
                 <li class="custom-bullet">Enhanced WVD firewall security by adding IP addresses to the Unilever whitelist using Terraform.</li>
             </ul>
