--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>AR Development Extern // Snap Inc.</h3>
             <span class="experience-date">September 2024 - Present</span>
             <p>
-                I am currently using JavaScript and Lens Studio to develop AR experiences using digital storytelling as a business model for Snapchat.
+                I’m currently leveraging JavaScript and Lens Studio to craft immersive AR experiences for Snapchat, utilizing digital storytelling as a core business strategy.
             </p>
         </div>
         <div class="experience">
