--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <!-- <img src="/Users/ny/vlonk.github.io/vlonk.github.io/mvt3.gif" alt="About GIF" class="side-gif"> -->
-        <p>Howdy! I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
+        <h2>Howdy!</h2>
+        <img src="/Users/ny/vlonk.github.io/vlonk.github.io/NY_SIDE_1.jpg" alt="Ny" class="about-picture">
+        <p>I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
     </section>
 
     <section id="experience">
