--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
     <section id="experience">
         <h2>Experience</h2>
         <div class="experience">
-            <h3>Computer Vision Research Assistant // University of North Texas</h3>
+            <h3>Computer Vision Research Assistant @ University of North Texas</h3>
             <span class="experience-date">October 2024 - Present</span>
             <p>
                 Under the supervision of Dr. Heng Fan, where I am working on liquid detection in the wild using computer vision and deep learning.
             </p>
         </div>
         <div class="experience">
-            <h3>AR Development Extern // Snap Inc.</h3>
+            <h3>AR Development Extern @ Snap Inc.</h3>
             <span class="experience-date">September 2024 - Present</span>
             <p>
                 I’m currently leveraging JavaScript and Lens Studio to craft immersive AR experiences for Snapchat, utilizing digital storytelling as a core business strategy.
             </p>
         </div>
         <div class="experience">
-            <h3>AI R&D and Cloud Engineering Intern // Rockwell Automation</h3>
+            <h3>AI R&D and Cloud Engineering Intern @ Rockwell Automation</h3>
             <span class="experience-date">May 2024 - August 2024</span>
             <ul>
                 <li class="custom-bullet">Optimized React front-end compatibility and integration with the HMI for usability by implementing API calls into a StreamLit user interface, enabling 8 endpoints including document uploads and data streaming.</li>
@@ -60,13 +60,13 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>PiggyBank // TAMUHack</h3>
+            <h3>PiggyBank @ TAMUHack</h3>
             <span class="project-date">January 2024</span>
             <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
             <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
         </div>
         <div class="project">
-            <h3>Casa Compass // HackUTD</h3>
+            <h3>Casa Compass @ HackUTD</h3>
             <span class="project-date">November 2023</span>
             <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
             <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
