--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="about">
         <h2>Howdy!</h2>
-        <img src="/Users/ny/vlonk.github.io/vlonk.github.io/NY_SIDE_1-min (1).jpg" alt="Ny" class="about-picture">
+        <img src="/Users/ny/vlonk.github.io/vlonk.github.io/NY.jpg" alt="My Picture" class="about-picture">
         <p>I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
     </section>
 
