--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="about">
         <h2>Howdy!</h2>
-        <img src="https://vlonk.github.io/vlonk.github.io/NY.JPG" alt="My Picture" class="about-picture">
+        <img src="https://vlonk.github.io/vlonk.github.io/NY.jpg" alt="My Picture" class="about-picture">
         <p>I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
     </section>
 
