--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ny Dang</title>
+    <title>🌱 Ny Dang</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="experience.css">
 </head>
 <body>
     <header>
-        <h1>Ny Dang.</h1>
+        <h1>🌱 Ny Dang.</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
