--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 
     <section id="contact">
         <h2>Contact</h2>
+        <p>Let's connect!</p>
         <p>trucnyd@gmail.com</p>
         <p>
             <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
-                Connect with me on LinkedIn
+                LinkedIn
             </a>
         </p>
     </section>
