--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>🌱 Ny Dang</title>
@@ -76,10 +77,19 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>trucnyd@gmail.com</p>
         <p>
             <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
-                LinkedIn
+                <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+        </p>
+        <p>
+            <a href="mailto:trucnyd@gmail.com">
+                <i class="fas fa-envelope"></i> Email
+            </a>
+        </p>
+        <p>
+            <a href="https://github.com/vlonk">
+                <i class="fab fa-github"></i> GitHub
             </a>
         </p>
     </section>
