--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="experience.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <header>
@@ -77,21 +78,27 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>
-            <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-linkedin"></i> LinkedIn
-            </a>
-        </p>
-        <p>
-            <a href="mailto:trucnyd@gmail.com">
-                <i class="fas fa-envelope"></i> Email
-            </a>
-        </p>
-        <p>
-            <a href="https://github.com/vlonk">
-                <i class="fab fa-github"></i> GitHub
-            </a>
-        </p>
+        
+            <p>
+                <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+            </p>
+        </div>
+        <div>
+            <p>
+                <a href="mailto:trucnyd@gmail.com">
+                    <i class="fas fa-envelope"></i> Email
+                </a>
+            </p>
+        </div>
+        <div>
+            <p>
+                <a href="https://github.com/vlonk">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+            </p>
+        </div>
     </section>
 
     <script src="script.js"></script>
