--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        
+        <div class="contact">
             <p>
                 <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
             </p>
         </div>
-        <div>
+        <div class="contact">
             <p>
                 <a href="mailto:trucnyd@gmail.com">
                     <i class="fas fa-envelope"></i> Email
                 </a>
             </p>
         </div>
-        <div>
+        <div class="contact">
             <p>
                 <a href="https://github.com/vlonk">
                     <i class="fab fa-github"></i> GitHub
