change css for contact

--- a/index.html
+++ b/index.html
@@ -79,21 +79,15 @@
     <section id="contact">
         <h2>Contact</h2>
         <div class="contact">
-            <p>
-                <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-linkedin"></i> LinkedIn
-                </a>
-            </p>
-            <p>
-                <a href="mailto:trucnyd@gmail.com">
-                    <i class="fas fa-envelope"></i> Email
-                </a>
-            </p>
-            <p>
-                <a href="https://github.com/vlonk">
-                    <i class="fab fa-github"></i> GitHub
-                </a>
-            </p>
+            <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="mailto:trucnyd@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://github.com/vlonk">
+                <i class="fab fa-github"></i> GitHub
+            </a>
         </div>
     </section>
 
