--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <i class="fas fa-envelope"></i>
             </a>
             <a href="https://github.com/vlonk">
-                <i class="fab fa-github"></i> GitHub
+                <i class="fab fa-github"></i>
             </a>
         </div>
     </section>
