--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
+        <!-- <h2>Contact</h2> -->
         <div class="contact">
             <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin"></i>
