--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>🌱 Ny Dang</title>
+    <title>Ny Dang</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="experience.css">
@@ -62,16 +62,28 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
+            <h3>Exploratory Data Analysis on the Sean Lahman Baseball Dataset</h3>
+            <span class="project-date">October 2024</span>
+            <p><strong>Languages:</strong> R</p>
+            <p><strong>Software and Frameworks:</strong> RStudio, ggplot2, corrplot, reshape2/tidyr, dplyr, rpart, ranger</p>
+        </div>
+        <div class="project">
             <h3>PiggyBank @ TAMUHack</h3>
             <span class="project-date">January 2024</span>
             <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
-            <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
+            <p><strong>Software and Frameworks:</strong> Flask, Bootstrap, MongoDB, Node.js, React</p>
         </div>
         <div class="project">
             <h3>Casa Compass @ HackUTD</h3>
             <span class="project-date">November 2023</span>
             <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
-            <p><strong>Software:</strong> Flask, Bootstrap, MongoDB, Node.js</p>
+            <p><strong>Software and Frameworks:</strong> Flask, Bootstrap, MongoDB, Node.js, React</p>
+        </div>
+        <div class="project">
+            <h3>SoulSupport @ SASEHack</h3>
+            <span class="project-date">October 2023</span>
+            <p><strong>Languages:</strong> Python, JavaScript, HTML/CSS</p>
+            <p><strong>Software and Frameworks:</strong> Flask, Bootstrap, MongoDB, Node.js, React</p>
         </div>
 
     </section>
