fixed grammar error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="experience">
         <h2>Experience</h2>
         <div class="experience">
-            <h3>Computer Vision Research Assistant @ University of North Texas</h3>
+            <h3>Computer Vision Research Assistant @ the University of North Texas</h3>
             <span class="experience-date">October 2024 - Present</span>
             <p>
                 Under the supervision of Dr. Heng Fan, where I am working on liquid detection in the wild using computer vision and deep learning.
