--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="experience.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="hobbies.css">
 </head>
 <body>
     <header>
@@ -29,6 +30,90 @@
         <h2>Howdy!</h2>
         <p>I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
     </section>
+
+    <section id="hobbies">
+        <h2>My Hobbies</h2>
+        
+        <div class="hobby-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-content">
+                <div class="front">
+                    <div class="image-slideshow">
+                        <img src="images/music1.jpg" alt="Music Image 1">
+                        <img src="images/music2.jpg" alt="Music Image 2">
+                        <img src="images/music3.jpg" alt="Music Image 3">
+                    </div>
+                    <p>Outdoor Activities</p>
+                </div>
+                <div class="back">
+                    <p>I enjoy hiking through nature and sightseeing. My favorite routes to run are the scenic ones!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="hobby-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-content">
+                <div class="front">
+                    <div class="image-slideshow">
+                        <img src="images/music1.jpg" alt="Music Image 1">
+                        <img src="images/music2.jpg" alt="Music Image 2">
+                        <img src="images/music3.jpg" alt="Music Image 3">
+                    </div>
+                    <p>Sports</p>
+                </div>
+                <div class="back">
+                    <p>I love playing team sports with friends whether it be volleyball, badminton, or pickleball.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="hobby-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-content">
+                <div class="front">
+                    <div class="image-slideshow">
+                        <img src="images/music1.jpg" alt="Music Image 1">
+                        <img src="images/music2.jpg" alt="Music Image 2">
+                        <img src="images/music3.jpg" alt="Music Image 3">
+                    </div>
+                    <p>Cafe Hopping</p>
+                </div>
+                <div class="back">
+                    <p>One of my favorite ways to spend the weekend is go to cafe hopping with my friends and family to study or work at.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="hobby-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-content">
+                <div class="front">
+                    <div class="image-slideshow">
+                        <img src="images/music1.jpg" alt="Music Image 1">
+                        <img src="images/music2.jpg" alt="Music Image 2">
+                        <img src="images/music3.jpg" alt="Music Image 3">
+                    </div>
+                    <p>Rock Climbing</p>
+                </div>
+                <div class="back">
+                    <p>Solving a challenging boulder problem and/or getting to the top of a long endurance belay route is one of the biggest victories a girl can get in her day.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <div class="hobby-card" onclick="this.classList.toggle('flipped')">
+        <div class="card-content">
+            <div class="front">
+                <div class="image-slideshow">
+                    <img src="images/music1.jpg" alt="Music Image 1">
+                    <img src="images/music2.jpg" alt="Music Image 2">
+                    <img src="images/music3.jpg" alt="Music Image 3">
+                </div>
+                <p>Matcha</p>
+            </div>
+            <div class="back">
+                <p>This definitely deserves a card of its own. My favorite matcha (not biased) is actually made by me!</p>
+            </div>
+        </div>
+    </div>
 
     <section id="experience">
         <h2>Experience</h2>
