--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section id="about">
-        <img src="NY.jpg" alt="My Picture" class="about-picture">
+        <img src="images/NY.jpg" alt="My Picture" class="about-picture">
         <h2>Howdy!</h2>
         <p>I'm Ny, an aspiring Software Engineer. Scroll to get to know more about me!</p>
     </section>
@@ -97,23 +97,24 @@
                 </div>
             </div>
         </div>
-    </section>
-    
-    <div class="hobby-card" onclick="this.classList.toggle('flipped')">
-        <div class="card-content">
-            <div class="front">
-                <div class="image-slideshow">
-                    <img src="images/music1.jpg" alt="Music Image 1">
-                    <img src="images/music2.jpg" alt="Music Image 2">
-                    <img src="images/music3.jpg" alt="Music Image 3">
+
+        <div class="hobby-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-content">
+                <div class="front">
+                    <div class="image-slideshow">
+                        <img src="images/music1.jpg" alt="Music Image 1">
+                        <img src="images/music2.jpg" alt="Music Image 2">
+                        <img src="images/music3.jpg" alt="Music Image 3">
+                    </div>
+                    <p>Matcha</p>
                 </div>
-                <p>Matcha</p>
-            </div>
-            <div class="back">
-                <p>This definitely deserves a card of its own. My favorite matcha (not biased) is actually made by me!</p>
+                <div class="back">
+                    <p>This definitely deserves a card of its own. My favorite matcha (not biased) is actually made by me!</p>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    
 
     <section id="experience">
         <h2>Experience</h2>
