--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="card-content">
                 <div class="front">
                     <div class="image-slideshow">
-                        <img src="images/music1.jpg" alt="Music Image 1">
-                        <img src="images/music2.jpg" alt="Music Image 2">
-                        <img src="images/music3.jpg" alt="Music Image 3">
+                        <img src="images/hike1.jpg" alt="Hiking">
+                        <img src="images/hike2.jpg" alt="Scenic View">
+                        <img src="images/hike3.jpg" alt="Chicago View">
                     </div>
                     <p>Outdoor Activities</p>
                 </div>
