--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="hobbies">
-        <h2>My Hobbies</h2>
+        <h2>˚ʚ♡ɞ˚ click through my hobbies ˚ʚ♡ɞ˚</h2>
         
         <div class="hobby-card" onclick="this.classList.toggle('flipped')">
             <div class="card-content">
