--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
             <div class="card-content">
                 <div class="front">
                     <div class="image-slideshow">
-                        <img src="images/music1.jpg" alt="Music Image 1">
-                        <img src="images/music2.jpg" alt="Music Image 2">
-                        <img src="images/music3.jpg" alt="Music Image 3">
+                        <img src="images/team1.jpg" alt="Music Image 1">
+                        <img src="images/team2.jpg" alt="Music Image 2">
                     </div>
                 </div>
                 <div class="back">
