--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="card-content">
                 <div class="front">
                     <div class="image-slideshow">
-                        <img src="images/music1.jpg" alt="Music Image 1">
-                        <img src="images/music2.jpg" alt="Music Image 2">
-                        <img src="images/music3.jpg" alt="Music Image 3">
+                        <img src="images/cafe1.jpg" alt="Music Image 1">
+                        <img src="images/cafe2.jpg" alt="Music Image 2">
+                        <img src="images/cafe3.jpg" alt="Music Image 3">
                     </div>
                 </div>
                 <div class="back">
@@ -82,9 +82,9 @@
             <div class="card-content">
                 <div class="front">
                     <div class="image-slideshow">
-                        <img src="images/music1.jpg" alt="Music Image 1">
-                        <img src="images/music2.jpg" alt="Music Image 2">
-                        <img src="images/music3.jpg" alt="Music Image 3">
+                        <img src="images/climb1.jpg" alt="Music Image 1">
+                        <img src="images/climb2.jpg" alt="Music Image 2">
+                        <img src="images/climb3.jpg" alt="Music Image 3">
                     </div>
                 </div>
                 <div class="back">
