--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card-content">
                 <div class="front">
                     <div class="image-slideshow">
-                        <img src="images/team1.jpg" alt="Music Image 1">
+                        <img src="images/team1.png" alt="Music Image 1">
                         <img src="images/team2.jpg" alt="Music Image 2">
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="front">
                     <div class="image-slideshow">
                         <img src="images/climb1.jpg" alt="Music Image 1">
-                        <img src="images/climb2.jpg" alt="Music Image 2">
+                        <img src="images/climb2.png" alt="Music Image 2">
                         <img src="images/climb3.jpg" alt="Music Image 3">
                     </div>
                 </div>
