--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <div class="image-slideshow">
                         <img src="images/team1.png" alt="Music Image 1">
                         <img src="images/team2.jpg" alt="Music Image 2">
+                        <img src="images/team3.jpg" alt="Music Image 2">
                     </div>
                 </div>
                 <div class="back">
@@ -103,7 +104,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>This definitely deserves a card of its own. My favorite matcha (not biased) is actually made by me!</p>
+                    <p>My favorite matcha (not biased) is actually made by me!</p>
                 </div>
             </div>
         </div>
