--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <div class="card-content">
                 <div class="front">
                     <div class="image-slideshow">
-                        <img src="images/music1.jpg" alt="Music Image 1">
-                        <img src="images/music2.jpg" alt="Music Image 2">
-                        <img src="images/music3.jpg" alt="Music Image 3">
+                        <img src="images/matcha1.jpg" alt="Music Image 1">
+                        <img src="images/matcha2.jpg" alt="Music Image 2">
+                        <img src="images/matcha3.jpg" alt="Music Image 3">
                     </div>
                 </div>
                 <div class="back">
