--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>I enjoy hiking through nature and sightseeing. My favorite routes to run are the scenic ones!</p>
+                    <p>On my free weekends, I like to go and enjoy nature. Hiking, running, or simply strolling through a scenic view really rejuvenates me.</p>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>I love playing team sports with friends whether it be volleyball, badminton, or pickleball.</p>
+                    <p>I enjoy playing volleyball, badminton, or pickleball with my friends. I'm not quite the best, but I strive to get better every game.</p>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>One of my favorite ways to spend the weekend is go to cafe hopping with my friends and family to study or work at.</p>
+                    <p>Weekly hangouts at a cafe to catch up or work is a mandatory feat for my friends and family.</p>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>Solving a challenging boulder problem and/or getting to the top of a long endurance belay route is one of the biggest victories a girl can get in her day.</p>
+                    <p>Nothing gives me more of an adrenaline kick than solving a challenging boulder problem or getting to the top of a long endurance belay route (besides when my code compiles).</p>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>My favorite matcha (not biased) is actually made by me!</p>
+                    <p>I'm a bit of a matcha hobbiest. I spend loads of time researching matcha powders from Japan. After all, a matcha a day keeps the doctor away.</p>
                 </div>
             </div>
         </div>
