changed desc. for ai

--- a/index.html
+++ b/index.html
@@ -124,18 +124,14 @@
             <h3>AR Development Extern @ Snap Inc.</h3>
             <span class="experience-date">September 2024 - Present</span>
             <p>
-                I’m currently leveraging JavaScript and Lens Studio to craft immersive AR experiences for Snapchat, utilizing digital storytelling as a core business strategy.
+                Leveraged JavaScript and Lens Studio to craft immersive AR experiences for Snapchat, utilizing digital storytelling as a core business strategy.
             </p>
         </div>
         <div class="experience">
             <h3>AI R&D and Cloud Engineering Intern @ Rockwell Automation</h3>
             <span class="experience-date">May 2024 - August 2024</span>
             <ul>
-                <li class="custom-bullet">Optimized React front-end compatibility and integration with the HMI for usability by implementing API calls into a StreamLit user interface, enabling 8 endpoints including document uploads and data streaming.</li>
-                <li class="custom-bullet">Enhanced MLOps observability by integrating middleware that captures over 8 key metrics using LangSmith, tracking HTTP requests to all endpoints, offering insights into the model’s processing and output generation.</li>
-                <li class="custom-bullet">Decreased overall deployment time by 11% by reducing setup time by 5 minutes per VM, thus enhancing operational efficiency by automating the configuration of undetected data disks in Azure VMs using PowerShell.</li>
-                <li class="custom-bullet">Restored VMs compromised by CrowdStrike within 24 hrs by executing DevOps remediation pipelines.</li>
-                <li class="custom-bullet">Enhanced WVD firewall security by adding IP addresses to the Unilever whitelist using Terraform.</li>
+                <li class="custom-bullet">Spent my summer of 2024 learning new skills in the DevOps and AI space.</li>
             </ul>
         </div>
     </section>
@@ -143,7 +139,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Exploratory Data Analysis on the Sean Lahman Baseball Dataset</h3>
+            <h3>Ghost Friends </h3>
             <span class="project-date">October 2024</span>
             <p><strong>Languages:</strong> R</p>
             <p><strong>Software and Frameworks:</strong> RStudio, ggplot2, corrplot, reshape2/tidyr, dplyr, rpart, ranger</p>
