--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Ghost Friends </h3>
-            <span class="project-date">October 2024</span>
-            <p><strong>Languages:</strong> R</p>
-            <p><strong>Software and Frameworks:</strong> RStudio, ggplot2, corrplot, reshape2/tidyr, dplyr, rpart, ranger</p>
+            <span class="project-date">October 2024 - November 2024</span>
+            <p><strong>Languages:</strong> JavaScript</p>
+            <p><strong>Software and Frameworks:</strong> Lens Studio</p>
         </div>
         <div class="project">
             <h3>PiggyBank @ TAMUHack</h3>
