--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="experience">
             <h3>AI R&D and Cloud Engineering Intern @ Rockwell Automation</h3>
             <span class="experience-date">May 2024 - August 2024</span>
-            <ul>
-                <li class="custom-bullet">Spent my summer of 2024 learning new skills in the DevOps and AI space.</li>
-            </ul>
+            <p>
+                Spent my summer of 2024 learning new skills in the DevOps and AI space.</li>
+            </p>
         </div>
     </section>
 
