--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Ghost Friends </h3>
+            <h3>Ghost Friends Snap Lens</h3>
             <span class="project-date">October 2024 - November 2024</span>
             <p><strong>Languages:</strong> JavaScript</p>
             <p><strong>Software and Frameworks:</strong> Lens Studio</p>
