--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     </section>
 
-    <!-- <section id="contact"> -->
+    <section id="contact">
         <!-- <h2>Contact</h2> -->
         <div class="contact">
             <a href="https://www.linkedin.com/in/ny-dang/" target="_blank" rel="noopener noreferrer">
@@ -178,7 +178,7 @@
                 <i class="fab fa-github"></i>
             </a>
         </div>
-    <!-- </section> -->
+    </section>
 
     <script src="script.js"></script>
 </body>
