--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <h3>AI R&D and Cloud Engineering Intern @ Rockwell Automation</h3>
             <span class="experience-date">May 2024 - August 2024</span>
             <p>
-                Spent my summer of 2024 learning new skills in the DevOps and AI space.</li>
+                Spent my summer of 2024 learning new skills in the DevOps and AI space.
             </p>
         </div>
     </section>
