--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>🌱 Ny Dang!</h1>
+        <h1>🌱 Ny Dang.</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -124,14 +124,14 @@
             <h3>AR Development Extern @ Snap Inc.</h3>
             <span class="experience-date">September 2024 - Present</span>
             <p>
-                Leveraged JavaScript and Lens Studio to craft immersive AR experiences for Snapchat, utilizing digital storytelling as a core business strategy.
+                I leveraged JavaScript and Lens Studio to craft immersive AR experiences for Snapchat, utilizing digital storytelling as a core business strategy.
             </p>
         </div>
         <div class="experience">
             <h3>AI R&D and Cloud Engineering Intern @ Rockwell Automation</h3>
             <span class="experience-date">May 2024 - August 2024</span>
             <p>
-                Spent my summer of 2024 learning new skills in the DevOps and AI space.
+                I spent my summer of 2024 learning new skills in the DevOps and AI space.
             </p>
         </div>
     </section>
@@ -179,9 +179,6 @@
             </a>
         </div>
     </section>
-
     <script src="script.js"></script>
 </body>
-
-
 </html>
